--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "react project from tutorial",
   "main": "index.js",
   "scripts": {
-    "production":"webpack -p",
-    "start":"webpack-dev-server"
+    "production": "webpack -p",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   }
 }
